fix card flip bug on firefox

--- a/client/src/components/Flashcard.module.css
+++ b/client/src/components/Flashcard.module.css
@@ -72,10 +72,12 @@
   border: none;
   border-radius: 4px;
   background: none;
+  cursor: pointer;
 }
 
 .editable {
   color: rgba(9, 20, 58, 0.75);
+  cursor: text;
 }
 
 @media all and (max-width: 850px) {
@@ -93,5 +95,11 @@
 
   .card {
     min-height: 350px;
+  }
+}
+
+@media all and (max-height: 750px) {
+  .card {
+    min-height: 300px;
   }
 }
